# html_messages_splitter

./: .gitignore  README.md  pyproject.toml  pytest.ini  split_msg.py
.github/workflows/: main_protect.yml
tests/: conftest.py  test_split_message.py  test_split_msg.py
tests/fixtures/: fixture_split_message.py
