[project]
name = "html_messages_splitter"
version = "0.1.0"
description = "A tool to split HTML into valid fragments under a character limit."
authors = [
    {name = "Pavel Koshelev",email = "web2cap@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
